// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpansionPanel component should match snapshot - ExpansionPanel complete: ExpansionPanel with complete example 1`] = `
<div
  className="MuiPaper-root MuiAccordion-root Mui-expanded MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    aria-disabled={false}
    aria-expanded={true}
    className="MuiButtonBase-root MuiAccordionSummary-root Mui-expanded"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiAccordionSummary-content Mui-expanded"
    >
      Summary
    </div>
  </div>
  <div
    className="MuiCollapse-container MuiCollapse-entered"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper"
    >
      <div
        className="MuiCollapse-wrapperInner"
      >
        <div
          role="region"
        >
          <div
            className="MuiAccordionDetails-root"
          >
            Details
          </div>
          <div
            className="MuiAccordionActions-root MuiAccordionActions-spacing"
          >
            Actions
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpansionPanel component should match snapshot - ExpansionPanelActions children: ExpansionPanel with ExpansionPanelActions 1`] = `
<div
  className="MuiPaper-root MuiAccordion-root MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="MuiAccordionActions-root MuiAccordionActions-spacing"
  >
    content
  </div>
  <div
    className="MuiCollapse-container MuiCollapse-hidden"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper"
    >
      <div
        className="MuiCollapse-wrapperInner"
      >
        <div
          role="region"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpansionPanel component should match snapshot - ExpansionPanelDetails children: ExpansionPanel with ExpansionPanelDetails 1`] = `
<div
  className="MuiPaper-root MuiAccordion-root MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="MuiAccordionDetails-root"
  >
    content
  </div>
  <div
    className="MuiCollapse-container MuiCollapse-hidden"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper"
    >
      <div
        className="MuiCollapse-wrapperInner"
      >
        <div
          role="region"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpansionPanel component should match snapshot - ExpansionPanelSummary children: ExpansionPanel with ExpansionPanelSummary 1`] = `
<div
  className="MuiPaper-root MuiAccordion-root MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    aria-disabled={false}
    aria-expanded={false}
    className="MuiButtonBase-root MuiAccordionSummary-root"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiAccordionSummary-content"
    >
      content
    </div>
  </div>
  <div
    className="MuiCollapse-container MuiCollapse-hidden"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper"
    >
      <div
        className="MuiCollapse-wrapperInner"
      >
        <div
          role="region"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpansionPanel component should match snapshot - Simple children: ExpansionPanel with simple children 1`] = `
<div
  className="MuiPaper-root MuiAccordion-root MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
>
  <div>
    content
  </div>
  <div
    className="MuiCollapse-container MuiCollapse-hidden"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper"
    >
      <div
        className="MuiCollapse-wrapperInner"
      >
        <div
          role="region"
        />
      </div>
    </div>
  </div>
</div>
`;
